--- a/languages/xyz.pot
+++ b/languages/xyz.pot
@@ -49,7 +49,7 @@ msgid "Primary Menu"
 msgstr ""
 
 #: functions.php:50
-msgid "phone-menu"
+msgid "Optional Mobile Menu"
 msgstr ""
 
 #: functions.php:107
